textova cast + GRPR

--- a/Diplomka/Diploma/DP_UHR0019/mybib.bib
+++ b/Diplomka/Diploma/DP_UHR0019/mybib.bib
@@ -43,7 +43,7 @@
 @misc{5,
   title = {{TeamNET} Data},
   howpublished = {\url{http://inflex.cz:8075/TeamNETdata}},
-  note = {2017-09-30}
+  note = {Navštívené: 2017-09-30}
 }
 
 @book{6,
@@ -94,7 +94,7 @@
 @misc{11,
   title = {{Active Record vs. Repository pattern} Repository pattern},
   howpublished = {\url{https://www.rarous.net/weblog/271-active-record-vs-repository-pattern.aspx}},
-  note = {2018-01-15}
+  note = {Navštívené: 2018-01-15}
 }
 
 @article{12,
@@ -111,28 +111,35 @@
 @misc{13,
   title = {Do Millennial and Gen Z Consumers Still Use Email?},
   howpublished = {\url{https://www.bluecore.com/blog/do-millennials-use-email/}},
-  note = {2017-03-30}
+  note = {Navštívené: 2017-03-30}
 }
 
 
 @misc{louvain,
   title = {LouvainSharp - Fast Louvain Method of Community Detection in C\#},
   howpublished = {\url{http://www.markusmobius.org/software/louvainsharp-fast-louvain-method-community-detection-c}},
-  note = {2017-12-12}
+  note = {Navštívené: 2017-12-12}
 }
 
 
 @misc{canvas,
   title = {Canvas.js},
   howpublished = {\url{https://canvasjs.com/}},
-  note = {2018-04-20}
+  note = {Navštívené: 2018-04-20}
 }
 
 @misc{14,
   title = {vis.js},
   howpublished = {\url{http://visjs.org/}},
-  note = {2017-01-30}
+  note = {Navštívené: 2017-01-30}
 }
+
+@misc{brokerage_borgatti,
+  title = {Steve Borgatti: Brokerage},
+  howpublished = {http://www.analytictech.com/Essex/Lectures/Brokerage.pdf}},
+  note = {Navštívené: 2018-04-24}
+}
+
 
 @article{15,
   title={Structures of mediation: A formal approach to brokerage in transaction networks},
