--- a/Diplomka/Diploma/DP_UHR0019/mybib.bib
+++ b/Diplomka/Diploma/DP_UHR0019/mybib.bib
@@ -18,6 +18,13 @@
   organization={IEEE}
 }
 
+@book{demel2002grafy,
+  title={Grafy a jejich aplikace},
+  author={Demel, Ji{\v{r}}{\'\i}},
+  year={2002},
+  publisher={Academia}
+}
+
 @article{3,
   title={Communication networks from the Enron email corpus “It's always about the people. Enron is no different”},
   author={Diesner, Jana and Frantz, Terrill L and Carley, Kathleen M},
@@ -97,6 +104,13 @@
   note = {Navštívené: 2018-01-15}
 }
 
+@article{kovavr2012uvod,
+  title={Úvod do Teorie grafů.},
+  author={Kov{\'a}{\v{r}}, Petr},
+  journal={Vysok{\'a} {\v{s}}kola b{\'a}{\v{n}}sk{\'a}. Technick{\'a} univerzita. Ostrava},
+  year={2012}
+}
+
 @article{12,
   title={Fast unfolding of communities in large networks},
   author={Blondel, Vincent D and Guillaume, Jean-Loup and Lambiotte, Renaud and Lefebvre, Etienne},
@@ -132,6 +146,12 @@
   title = {vis.js},
   howpublished = {\url{http://visjs.org/}},
   note = {Navštívené: 2017-01-30}
+}
+
+@misc{modelviewcontroller,
+  title = {Model View Controller},
+  howpublished = {\url{http://voho.eu/wiki/model-view-controller/}},
+  note = {Navštívené: 2017-01-25}
 }
 
 @misc{brokerage_borgatti,
